# ZisaFVM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  all_8hpp.html  all_8hpp.js  all_8hpp_source.html  all__reduce_8cpp.html  all__reduce_8hpp.html  all__reduce_8hpp.js  all__reduce_8hpp_source.html  all__variables_8cpp.html  all__variables_8cpp.js  all__variables_8hpp.html  all__variables_8hpp.js  all__variables_8hpp_source.html  all__variables__fwd_8hpp.html  all__variables__fwd_8hpp_source.html  all__variables__gatherer_8cpp.html  all__variables__gatherer_8hpp.html  all__variables__gatherer_8hpp.js  all__variables__gatherer_8hpp_source.html  all__variables__scatterer_8cpp.html  all__variables__scatterer_8hpp.html  all__variables__scatterer_8hpp.js  all__variables__scatterer_8hpp_source.html  annotated.html  annotated_dup.js  any_8hpp.html  any_8hpp.js  any_8hpp_source.html  array__cell__flags_8hpp.html  array__cell__flags_8hpp.js  array__cell__flags_8hpp_source.html  array__gatherer_8hpp.html  array__gatherer_8hpp.js  array__gatherer_8hpp_source.html  array__scatterer_8hpp.html  (+1881 more)
benchmarks/: CMakeLists.txt
cmake/: FindMAGMA.cmake  GetCompilerVersion.cmake  GetHelmholtzEOS.cmake  GetMetis.cmake  ZisaFVMConfig.cmake  clang_tidy.cmake  fast_debug.cmake  gperftools.cmake  has_build_type.cmake  native.cmake  sanitizers.cmake  warning_flags.cmake
grids.light/: cube_with_halo.tmpl  janka.tmpl  sphere.macro  sphere_with_halo.tmpl  spherical_shell.tmpl  spherical_shell_with_halo.tmpl  square.macro  square.tmpl  square_with_halo.tmpl
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  classes_4.js  (+124 more)
shaders/: vertex_shader.glsl
src/: CMakeLists.txt  cuda_demo.cpp  domain_decomposition.cpp  hdf5_demo.cpp  locate_point.cpp  opengl_demo.cpp  renumber_grid.cpp  something_demo.cpp  space_filling_curve_demo.cpp  test_distributed_reference.cpp  zisa.cpp
src/include/: CMakeLists.txt
src/include/zisa/: CMakeLists.txt
src/src/: CMakeLists.txt
src/src/zisa/: CMakeLists.txt
src/src/zisa/math/: CMakeLists.txt
src/zisa/: CMakeLists.txt
src/zisa/boundary/: CMakeLists.txt  boundary_condition_factory.cpp  frozen_boundary_condition.cpp  halo_exchange_bc.cpp  no_boundary_condition.cpp
src/zisa/cli/: CMakeLists.txt  input_parameters.cpp  parse_command_line.cpp
src/zisa/core/: CMakeLists.txt  time_loop.cpp
src/zisa/cuda/: CMakeLists.txt  hello_world.cu  magma_batched.cu  magma_context.cpp
src/zisa/cuda/reconstruction/: CMakeLists.txt  cholesky_decomposition.cpp
src/zisa/experiments/: CMakeLists.txt  down_sample_reference.cpp  numerical_experiment.cpp  numerical_experiment_factory.cpp  polytrope.cpp  rayleigh_taylor.cpp  smooth_bubble.cpp  stellar_convection.cpp
src/zisa/flux/: CMakeLists.txt
src/zisa/fvm_loops/: CMakeLists.txt  time_loop.cpp
src/zisa/grid/: CMakeLists.txt  cell.cpp  gmsh_reader.cpp  grid.cpp  point_locator.cpp
src/zisa/io/: CMakeLists.txt  backtrace.cpp  colors.cpp  data_source.cpp  exec.cpp  file_name_generator.cpp  fng.hpp  gathered_vis_info.cpp  gathered_visualization.cpp  hdf5_unstructured_writer.cpp  load_snapshot.cpp  mpi_progress_bar.cpp  no_visualization.cpp  parallel_load_snapshot.cpp  progress_bar.cpp  scalar_plot.cpp  scattered_data_source.cpp  tri_plot.cpp  visualization.cpp
src/zisa/loops/: CMakeLists.txt  range.cpp
src/zisa/math/: CMakeLists.txt  barycentric.cpp  bounding_box.cpp  cartesian.cpp  cell.cpp  cell_factory.cpp  cone.cpp  denormalized_rule.cpp  edge.cpp  edge_rule.cpp  face.cpp  face_factory.cpp  geometric_spacing.cpp  linear_spacing.cpp  newton.cpp  permutation.cpp  poly2d.cpp  quadrature.cpp  reference_solution.cpp  tetrahedral_rule.cpp  tetrahedron.cpp  triangle.cpp  triangular_rule.cpp
src/zisa/memory/: CMakeLists.txt  array_stencil_family.cpp
src/zisa/model/: CMakeLists.txt  all_variables.cpp  distributed_cfl_condition.cpp  euler.cpp  euler_factory.cpp  euler_variables.cpp  gravity.cpp  grid_variables.cpp  helmholtz_eos.cpp  ideal_gas_eos.cpp  instantaneous_physics.cpp  janka_eos.cpp  load_full_state.cpp  models.cpp  polytrope.cpp  radial_poisson_solver.cpp  save_full_state.cpp
src/zisa/mpi/: CMakeLists.txt
src/zisa/mpi/io/: CMakeLists.txt  gathered_vis_info.cpp  gathered_visualization_factory.cpp  hdf5_unstructured_file_dimensions.cpp  hdf5_unstructured_writer.cpp  mpi_progress_bar.cpp  parallel_load_snapshot.cpp  scattered_data_source_factory.cpp
src/zisa/mpi/math/: CMakeLists.txt  distributed_reference_solution.cpp
src/zisa/mpi/parallelization/: CMakeLists.txt  distributed_array_info.cpp  mpi_all_reduce.cpp  mpi_all_variables_gatherer.cpp  mpi_halo_exchange.cpp  mpi_single_node_array_gatherer.cpp  mpi_single_node_array_scatterer.cpp
src/zisa/ode/: CMakeLists.txt  rate_of_change.cpp  runge_kutta.cpp  step_rejection.cpp  time_integration_factory.cpp  time_keeper_factory.cpp
src/zisa/opengl/: CMakeLists.txt  load_shaders.cpp  tri_plot.cpp  window.cpp
src/zisa/parallelization/: CMakeLists.txt  all_reduce.cpp  all_variables_gatherer.cpp  all_variables_scatterer.cpp  distributed_grid.cpp  domain_decomposition.cpp  halo_exchange.cpp  halo_info.cpp  local_grid.cpp  mpi_all_reduce.cpp  mpi_all_variables_gatherer.cpp  mpi_halo_exchange.cpp  mpi_single_node_array_gatherer.cpp
src/zisa/reconstruction/: CMakeLists.txt  assemble_weno_ao_matrix.cpp  cweno_ao.cpp  hybrid_weno.cpp  hybrid_weno_params.cpp  lsq_solver.cpp  lsq_solver_family.cpp  stencil.cpp  stencil_bias.cpp  stencil_family.cpp  stencil_family_params.cpp  stencil_params.cpp  weno_ao.cpp
src/zisa/utils/: CMakeLists.txt
test/: CMakeLists.txt  unit_tests.cpp
test/zisa/: CMakeLists.txt
tiwaz/: .gitignore  setup.py
(+338 files in other folders)
