if(ZISA_HAS_MPI)

endif()
add_subdirectory(boundary)
add_subdirectory(cli)
add_subdirectory(experiments)
add_subdirectory(flux)
add_subdirectory(fvm_loops)
add_subdirectory(grid)
add_subdirectory(io)
add_subdirectory(loops)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(model)
add_subdirectory(mpi)
add_subdirectory(ode)
add_subdirectory(opengl)
add_subdirectory(parallelization)
add_subdirectory(reconstruction)
add_subdirectory(utils)
